# stm32h750-eth

./: Cargo.toml  attach.sh  build.sh  flash.sh  memory.x  sock.py
src/: main.rs
src/web-interface/: index.html
