cargo-features = ["edition2024"]

[package]
name = "rust-h750-eth"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32h750vb", "unstable-pac", "time-driver-any", 
"chrono" ] }
embassy-sync = { version = "0.6.2", features = [ "defmt" ] }
embassy-executor = { version = "0.7.0", features = [ "arch-cortex-m", "executor-thread", "defmt" ] }
embassy-embedded-hal = { version = "0.3.0" }
embassy-time = { version = "0.4.0", features = [ "defmt", "defmt-timestamp-uptime", "tick-hz-32_768" ] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-nal-async = "0.8.0"
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }
grounded = "0.2.0"

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

